# ocr-neuralnet

./: .gitignore  README.md  build.gradle  settings.gradle
cpp/: Matrix.h  math_utils.h  net_flood_ocrnn_NeuralNetwork.cpp  net_flood_ocrnn_NeuralNetwork.h  neural_net.h
gradle/wrapper/: gradle-wrapper.properties
java/src/net/flood/ocrnn/: CharacterQueryResult.java  CharacterQueryTask.java  CharacterTrainer.java  Const.java  Main.java  NeuralNetwork.java  TaskListener.java
java/src/net/flood/ocrnn/ui/: Animation.java  AnimationTimer.java  QueryPanel.java  TrainingPanel.java
java/src/net/flood/ocrnn/util/: Applier.java  FileUtils.java  ImageUtils.java  MathUtils.java
src/main/cpp/: CMakeLists.txt  Matrix.cpp  handle.h  math_utils.cpp  neural_net.cpp
src/main/java/net/flood/ocrnn/: CharacterImage.java  CharacterImageProvider.java  CharacterTester.java  NeuralNetwork.java  Task.java
src/main/java/net/flood/ocrnn/ui/: CharacterCanvas.java  CharacterDrawer.java  MainFrame.java  MatrixDrawer.java  PercentageDrawer.java  QueryPanel.java  TrainingPanel.java
src/main/java/net/flood/ocrnn/util/: ColorUtils.java  NativeUtils.java  Platform.java
